Stop using TempFolder from plugin API